--- a/app/src/main/res/layout/activity_fragment_class.xml
+++ b/app/src/main/res/layout/activity_fragment_class.xml
@@ -20,9 +20,9 @@
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
-        android:layout_height="78dp"
-        app:menu="@menu/bottomnavbar"
+        android:layout_height="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottomnavbar" />
 </android.support.constraint.ConstraintLayout>
