--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -6,5 +6,5 @@
         android:title="Connections"/>
     <item
         android:id="@+id/con"
-        android:title="connect" />
+        android:title="Connect" />
 </menu>
